<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".40"
            android:gravity="left"
            android:text="Text view: "
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".60"
            android:text="text view value"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutUpdate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".70"
            android:layout_marginTop="10dp"
            android:hint="Update nickname ?">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputLayoutUpdateValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:text="value" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UPDATE"/>
    </LinearLayout>
</LinearLayout>
