<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.LearnByPLaying.Activitati.LoginActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    ><!-- android:background="@color/backgroundColorBlack_1" -->


    <ImageView
        android:id="@+id/login_imgBackground"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/login_learn_wallpaper" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_textInputLayoutEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_imgBackground"
        android:visibility="invisible"
        />

    <!-- Text input layout & Edit text pentru E-MAIL -->
    <include
        android:id="@+id/login_textInputLayoutEmail"
        layout="@layout/login_input_email"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_imgBackground"
        app:layout_constraintVertical_bias="0.134"
        />

    <!-- Text input layout & Edit text pentru PAROLA -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_textInputLayoutPassword"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_textInputLayoutEmail"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textInputLayoutEmail"

        > <!-- app:passwordToggleEnabled="true" // Pentru a pune iconita de arata parola! -->

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/inputPass"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:singleLine="true"
            android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Link creare cont -->
    <TextView
        android:id="@+id/login_textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_textInputLayoutPassword"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/LoginRegister"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/login_textInputLayoutPassword"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/login_textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/login_textInputLayoutPassword" />

    <!-- Link recuperare/resetare parola -->
    <TextView
        android:id="@+id/login_textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/login_button"
        android:layout_below="@+id/login_textViewCreateAccount"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/LoginForgotPassword"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/login_textViewCreateAccount"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/login_textViewCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/login_textViewCreateAccount" />

    <!-- Button logare in aplicatie -->
    <include
        android:id="@+id/login_button"
        layout="@layout/login_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_textViewForgotPassword"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_textViewForgotPassword"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="@+id/login_textViewForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/login_textViewForgotPassword"
        app:layout_constraintVertical_bias="0.108" />



</android.support.constraint.ConstraintLayout>
