<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_black_48dp"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>-->

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/menu_profile"
        android:title="Profile"
        app:showAsAction="never"/>
    <!--<item android:id="@+id/menu_about"-->
        <!--android:title="About"-->
        <!--app:showAsAction="never"/>-->
    <item android:id="@+id/log_out"
        android:title="Log out"
        app:showAsAction="never"/>
</menu>